Fixed tab scrolling and delete button alignment.

--- a/css/patient.css
+++ b/css/patient.css
@@ -30,6 +30,12 @@
 	margin-top: 5px;
 }
 
+.table button, .table a {
+	width: 40px;
+	display: block;
+	margin: 0 auto;
+}
+
 .patientTree {
 	background-color: rgb(250,250,250);
 	margin-top: 10px;
@@ -101,7 +107,6 @@
 	overflow-y: auto;
 	border-bottom: 1px solid #ddd;
 	margin-bottom: 5px;
-
 }
 
 .employedPerson {
@@ -248,9 +253,21 @@
 	width: 108px;
 }
 
+.problemFormScroll {
+	overflow-y: auto;
+	border-bottom: 1px solid #ddd;
+	margin-bottom: 5px;
+}
+
 .medicationAlert {
 	height: 20px;
 	display: none;
+}
+
+.medicationFormScroll {
+	overflow-y: auto;
+	border-bottom: 1px solid #ddd;
+	margin-bottom: 5px;
 }
 
 .allergyAlert {
@@ -260,7 +277,13 @@
 
 .allergiesCheckbox  {
     display: inline-block;
-    width: 150px;   
+    width: 150px;
+}
+
+.allergyFormScroll {
+	overflow-y: auto;
+	border-bottom: 1px solid #ddd;
+	margin-bottom: 5px;
 }
 
 /* Orders */
